source/stylesheets/features/us-healthcare.css.scss
/* GENERAL STYLING */

$light-black: #222;
$light-grey:#ededed;
$black : #000;
$dark-blue: #004363;
$light-blue:#6496c8;

header p{
  text-align: center;
}

h1 {
    text-align: center;
}

p {
    font-size: 20px;
    display: block;
    margin: 1em 0;
    text-align: left;
}

article, footer {
  width: 70%;
  margin: 0 auto;
}

article h2, article h1, footer {
  text-align: center;
}

footer {
  font-size: 15px;
  margin: 12px auto;
}


a {
    font-size: 15px;
}

h3 {
    text-align: center;
}

.jumbotron {
  color: white;
  height: 600px;
  background-image: url("https://farm6.staticflickr.com/5473/11383979236_97370fc858_o.jpg"); 
  background-size: cover;
/*
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
*/
  text-shadow: 2px 2px black;
}

/* TABLE */

.previous-successes {
    margin: auto;
}

.centeredImage {
    text-align: center;
    margin: 0 auto;
}



/* TABS */

.container{
    width: 100%;
    padding: 0px;
    margin: 0 auto;
}

ul.tabs{
    margin: 0px;
    padding: 0px;
    list-style: none;
}
ul.tabs li{
    background: none;
    color: $light-black;
    display: inline-block;
    padding: 10px 15px;
    cursor: pointer;
}

ul.tabs li.current{
    background: $light-grey;
    color: $light-black;
}

.tab-content{
    display: none;
    background: $light-grey;
    padding: 15px;
}

.tab-content.current{
    display: inherit;
}

.embed-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 35px;
    height: 0;
    overflow: hidden;
}
.embed-container iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
}



/* SLIDE DOWN */
.slide-panel {
  display:none;
  background-color: $light-grey;
  margin: auto;
  padding-top: 10px;
  text-align: left;
  padding: 2% 5%;
}


span.slide {
  font-weight: 600;
  background-color: rgba(242, 224, 84, 0.55);
  cursor: pointer;
  padding:0 5px;
}

.embed-extra-info {
    position: relative;
    padding-bottom: 75%;
    padding-top: 35px;
    overflow: hidden;
    margin: 0 auto;
}

.embed-extra-info iframe {
    position: absolute;
    top:20px;
    left: 12.5%;
    height: 75%;
    width: 75%;

}

#p-slide {
    display: inline;
}

/* STORY */
#story {
    width: 70%;
    margin: auto;
    text-align: left;
}


/********* CECILE'S GRAPHS *********/
#spending-capita-chart {
    margin: auto;
}

#gdp-vs-capita-chart {
    margin: auto;
}

#quality-vs-capita-chart {
    margin: auto;
}

.axis path,
.axis line {
  fill: none;
  stroke: $black;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

.y.axis path {
  display: none;
}

.y.axis line {
    stroke: gray;
    opacity: .5;
    stroke-dasharray: 2,2;
}

.x.axis line {
    stroke: gray;
    opacity: .5;
    stroke-dasharray: 2,2;
}

/* line css for capita spending chart */
.line {
  fill: none;
  stroke: gray;
  stroke-width: 1.5px;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

/* point css for gdp v capita chart */
.dot {
    -webkit-transition: opacity 0.3s;
    -moz-transition: opacity 0.3s;
    -o-transition: opacity 0.3s;
    transition: opacity 0.3s;
}

.label-hover{
  opacity: 0;
}

.linepoint{
  opacity: 0;
  fill: gray;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

path.invisible {
  fill: none;
  stroke: rgba(0,0,0,0);
  stroke-width: 8px;
}

text.label {
  font-size: 10px;
  color: $black;
}

div.tooltip {
  position: absolute;
  text-align: center;
  width: auto;
  height: auto;
  padding: 5px;
  font: 10px sans-serif;
  background: white;
  border-style: solid;
  border-width: 1px;
  border-color: gray;
  border-radius: 3px;
  pointer-events: none;
}

/* BIBLIOGRAPHY */
#bibliography {
  text-align: left;
  font-size: 1.5rem;
}

/* FOOTER */
.circle {
    display: block;
    margin: auto;
}

.floating-circle {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    height: 150;
}

.floating-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    height: 50px;
    background-color: white;
    opacity: .7;
    border-top-width: thick;
    border-top-style: solid;
    border-top-color: #336699;
}

.footer {
    bottom: 0;
    left: 0;
    right: 0;
    height: 70px;
    background-color: white;
    opacity: 1;
    text-align: center;
}


/* Bar Chart on Waste */

#waste-chart {
    position: relative;
    margin: 0 auto;
}


#waste-chart svg {
    margin-top: 60px;
}

.bar_chart {
  color: #fff;
  background-color: $light-blue;
  text-shadow: -1px 1px #417cb8;
}

/*
.axis path,
.yaxis path,
.xaxis path,
.axis line
.yaxis line,
.xaxis line{
    fill: none;
    stroke: black;
    shape-rendering: cripsEdges;
}
*/

.yaxis path, .xaxis path {
    display: none;
}

.yaxis line {
    stroke: gray;
    opacity: .5;
    stroke-dasharray: 2,2;
}

.axis text,
.yaxis text,
.xaxis text{
    font-family: sans-serif;
    font-size: 11px !important;
}
#totalProcedures {
    cursor: pointer;
}
.bar {
    fill: $dark-blue;
}

/* Bar Chart on Waste: Radio Buttons */

.chart-container h4{
   font-weight: bold;
}

.chart-container {
  width: 100%;
}

.chart-container div{
  margin: 0 auto;

}

.toggle-btn {       /* Text */
    text-align: center;
    margin: 0 auto;
    padding:0.4em 3em;
    color: #fff;
    background-color: $light-blue;
    text-shadow: -1px 1px #417cb8;
    display:inline-block;
    border:solid 1px #CCC;
    cursor:pointer;
    vertical-align: middle;
}

.toggle-btn-grp.cssonly {
  margin: 0 auto;
}

.toggle-btn-grp.cssonly div {
    width: 32.5%;
    height: auto;
    display: inline-block;
    position: relative;
    height: 5.5rem;
}

.toggle-btn-grp.cssonly div label {
    width: 100%;
    height: 5.5rem;
    margin: 0 auto;
    z-index:0;
    padding-top:15px;
    vertical-align: middle;
    text-align:center;
    font-weight: normal;
    font-size: auto;
    height: 50px;
}

.toggle-btn-grp.cssonly div input {
    position:absolute;
    top: 50%;
    left: 50%;
    z-index:1;
    opacity:0;
}

.toggle-btn-grp.cssonly div input:checked + label {
    background-color: #27496d;
    text-shadow: -1px 1px #193047;
}

.toggle-btn-grp.cssonly div:hover label, .toggle-btn-grp.cssonly div:hover input:checked + label {
    background-color: #346392;
    text-shadow: -1px 1px #27496d;
}

/* SANKEY */
.node rect {
  /*cursor: move; /* changes icon cursor */
  fill-opacity: .9;
  shape-rendering: crispEdges;
}

.node text {
  pointer-events: none;
  /*text-shadow: 0 1px 0 #fff;*/
  font: 12px sans-serif;
}

.link {
  fill: none;
  stroke: #d3d3d3;
  stroke-opacity: .5;
}

/* changes what happens to the link lines during mouseover */
/*
.link:hover{
  stroke: #939393;
  stroke-opacity: 1;
}
*/
.link[data-highlight="forwards"]{
  stroke: #5A97C9;
} 
.link[data-highlight="backwards"]{
  stroke: #5A97C9;
} 


/* FINAL VIZ GUI */

#perspectives li {
  float: left;
  width: 25%;
  height: 100px;
  text-align: center;
  display: inline;
  color: #fff;
  background-color: $light-blue;
  text-shadow: -1px 1px #417cb8;
  cursor:pointer;
}

.perspective h5 {
  color: white;
}

.perspective {
  height: 100px;
}
.perspective img {
  height: 70%;
  margin: auto;
}

#perspectives li:hover {
  background-color: #346392;
  text-shadow: -1px 1px #27496d;
}

[data-key="patient"].selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-key="provider"].selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-key="policymaker"].selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-key="payer"].selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

.perspective h5 {
  text-align: center
}

#actions li {
  float: left;
  width: 10%;
  height: 60px;
  text-align: center;
  display: inline;
  padding-top: 10px;
  font-weight: 200;
  cursor:pointer;
}
#actions li:hover {
  background-color: #346392;
  text-shadow: -1px 1px #27496d;
}


[data-perspective="patient"] li {
  color: #fff;
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
  border: none;
}

[data-perspective="provider"] li {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-perspective="policymaker"] li {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-perspective="payer"] li {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-perspective="patient"] li.selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-perspective="provider"] li.selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-perspective="policymaker"] li.selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}

[data-perspective="payer"] li.selected {
  background-color: #27496d;
  text-shadow: -1px 1px #193047;
}


.individual-action p {
  margin: auto;
  font-size: 10px;
  text-align: center;
  color: white;
}
.decision-point{
  background-color:$light-grey;
}
.decision-container{
  display:flex;
  .decision{
    cursor:pointer;
    flex:1;
    background-color:$light-blue;
    display:inline-block;
    width:calc(50% - 10px);
    
    &:hover{
      background-color: lighten($light-blue,20%)
    }
    &[data-selected="yes"]{
      background-color:darken($light-blue,20%);
    }
    &[data-selected="no"]{
      background-color:lighten($light-blue, 30%);
    }
    h3{
      height:2em;
      vertical-align:middle;
    }
  }
}
.decision, .next, .outcome{
  padding:10px;
  margin:15px;
}
.next{
  display:none;
}
.outcome{
  display:none;
  &[data-outcome="positive"]{
    background-color:green;
  }
  &[data-outcome="negative"]{
    background-color:lighten(red,40%);
  }
}

